--- a/pools EDA/CM/Open River Analysis.ipynb
+++ b/pools EDA/CM/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wanted-sweet",
+   "id": "color-receipt",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 169,
    "id": "swedish-raising",
    "metadata": {},
    "outputs": [],
@@ -175,41 +175,15 @@
     "                    val = closest.index[i].value\n",
     "                    tuples.append((ID,dist,val))\n",
     "                closestDict[loc.ID] = tuples\n",
-    "                \n",
-    "def run():\n",
-    "    DictTN = makeDict(data,\"TN\")\n",
-    "    DictTP = makeDict(data,\"TP\")\n",
-    "    #put in predicted TN\n",
-    "    data[\"PredictedTN\"] = 0\n",
-    "    for index,row in data.iterrows():\n",
-    "        if pd.isnull(row[\"TN\"]):\n",
-    "            data.loc[index,\"PredictedTN\"] = predict(DictTN[row[\"LOCATCD\"]])\n",
-    "        else:\n",
-    "            data.loc[index,\"PredictedTN\"] = row[\"TN\"]\n",
     "\n",
-    "    data[\"PredictedTP\"] = 0\n",
-    "    for index,row in data.iterrows():\n",
-    "        if pd.isnull(row[\"TP\"]):\n",
-    "            data.loc[index,\"PredictedTP\"] = predict(DictTP[row[\"LOCATCD\"]])\n",
-    "        else:\n",
-    "            data.loc[index,\"PredictedTP\"] = row[\"TP\"]   \n",
     "        \n",
-    "    print(data.shape)\n",
-    "    print(\"Filtering out points with blank entries in at least one of the columns\")\n",
-    "    cols = ['PredictedTN','PredictedTP','TEMP','DO','TURB','COND','VEL','SS','WDP','CHLcal','SECCHI']\n",
-    "    #for col in cols:\n",
-    "    #    print(col,data[col].isna().sum())\n",
-    "    qualdata_prediction = filterblanks(cols,data,True)\n",
-    "    print(qualdata_prediction.shape)\n",
-    "    \n",
-    "    \n",
     "'''\n",
     "data - the pandas dataframe that is ready to interpolate missing values\n",
     "MUST HAVE \"LATITUDE\", \"LONGITUDE\",\"YEAR\", \"TIME CODE\", \"LOCATCD\" columns\n",
     "\n",
     "missing_vars - the list of column names (as strings) of the dataframe that we should attempt to fill in\n",
     "\n",
-    "numlocations - the number of locations used to predict the new value, default is 2\n",
+    "numlocations - the number of locations used to predict the new value, default is 2 (currently the only option implemented)\n",
     "\n",
     "RETURN - a dataframe with extra columns saying the predicted values of the missing_vars\n",
     "'''\n",
@@ -239,7 +213,7 @@
     "                bad = bool((curset[var].notnull().sum()<numlocations))\n",
     "                \n",
     "                # Returns a dictionary mapping each location code to a tuple with prediction information\n",
-    "                Dict = makeDict(curset,var)\n",
+    "                Dict = makeDict(curset,var,numlocations)\n",
     "\n",
     "                if(bad):\n",
     "                    print(\"Less than \"+str(numlocations)+\" locations have \"+var+\" in this set, dropping rows without \"+var)\n",
@@ -264,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affecting-greensboro",
+   "id": "northern-concord",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -343,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-edwards",
+   "id": "british-therapist",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -397,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guided-fancy",
+   "id": "intense-climb",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -605,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "twelve-glucose",
+   "id": "hazardous-console",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -676,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excessive-acquisition",
+   "id": "computational-auditor",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -685,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "educational-group",
+   "id": "norwegian-essay",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "consistent-vector",
+   "id": "running-montreal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ecological-proportion",
+   "id": "running-uganda",
    "metadata": {},
    "outputs": [
     {
@@ -748,9 +722,9 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "collectible-detroit",
+   "id": "occasional-soviet",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -783,7 +757,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afraid-private",
+   "id": "furnished-phenomenon",
+   "metadata": {},
+   "source": [
+    "Take a closer look at VEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "confidential-limit",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VELQF    9351\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[[\"VELQF\"]].notnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "final-proportion",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VELQF\n",
+       "X        8156\n",
+       "5        1108\n",
+       "3          53\n",
+       "0          22\n",
+       "A           7\n",
+       "1           2\n",
+       "6           2\n",
+       "x           1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[[\"VELQF\"]].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "necessary-flood",
    "metadata": {},
    "source": [
     "#### Interpolating missing data"
@@ -791,8 +825,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sunrise-python",
+   "execution_count": 155,
+   "id": "rural-protest",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1159,124 @@
       "Appending predicted data for  2012  timecode  1\n",
       "Size of this year and timecode: (150, 135)\n",
       "Interpolating TN\n",
-      "Interpolating TP\n"
+      "Interpolating TP\n",
+      "Appending predicted data for  2012  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2013  timecode  3\n",
+      "Size of this year and timecode: (151, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2013  timecode  4\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2013  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2013  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2014  timecode  3\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2014  timecode  4\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2014  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2014  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2015  timecode  3\n",
+      "Size of this year and timecode: (152, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2015  timecode  4\n",
+      "Size of this year and timecode: (151, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2015  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2015  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2016  timecode  3\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2016  timecode  4\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2016  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2016  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2017  timecode  3\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2017  timecode  4\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2017  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2017  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2018  timecode  3\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2018  timecode  4\n",
+      "Size of this year and timecode: (161, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2018  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2018  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2019  timecode  3\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2019  timecode  4\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2019  timecode  1\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Appending predicted data for  2019  timecode  2\n",
+      "Size of this year and timecode: (150, 135)\n",
+      "Interpolating TN\n",
+      "Interpolating TP\n",
+      "Final data set size is  (14701, 137)\n"
      ]
     }
    ],
@@ -1136,11 +1287,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "green-massage",
+   "execution_count": 158,
+   "id": "earned-vacuum",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PredictedTP</th>\n",
+       "      <th>TP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.378885</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.317299</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.339000</td>\n",
+       "      <td>0.339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.317826</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.379000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14696</th>\n",
+       "      <td>0.274253</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14697</th>\n",
+       "      <td>0.273977</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14698</th>\n",
+       "      <td>0.274417</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14699</th>\n",
+       "      <td>0.283000</td>\n",
+       "      <td>0.283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14700</th>\n",
+       "      <td>0.266000</td>\n",
+       "      <td>0.266</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14701 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PredictedTP     TP\n",
+       "0         0.378885    NaN\n",
+       "1         0.317299    NaN\n",
+       "2         0.339000  0.339\n",
+       "3         0.317826    NaN\n",
+       "4         0.379000    NaN\n",
+       "...            ...    ...\n",
+       "14696     0.274253    NaN\n",
+       "14697     0.273977    NaN\n",
+       "14698     0.274417    NaN\n",
+       "14699     0.283000  0.283\n",
+       "14700     0.266000  0.266\n",
+       "\n",
+       "[14701 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_interpolated[[\"PredictedTP\",\"TP\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "broken-genre",
+   "metadata": {},
+   "source": [
+    "Save the interpolated dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "valued-reynolds",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pickle.dump(water_interpolated, open( \"open_river_interpolated(TN,TP).p\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "intermediate-investigation",
+   "metadata": {},
+   "source": [
+    "Now see how many rows we gained after interpolation, and dropping VEL as a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "israeli-dealer",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12317, 137)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "used = ['PredictedTN','PredictedTP','TEMP','DO','TURB','COND','SS','WDP','CHLcal','SECCHI']\n",
+    "\n",
+    "water_filtered_interpolated = water_interpolated.dropna(axis=0, how='any', thresh=None, subset=used, inplace=False)\n",
+    "water_filtered_interpolated.shape"
+   ]
   }
  ],
  "metadata": {
