--- a/pools EDA/AS/data_collapse.ipynb
+++ b/pools EDA/AS/data_collapse.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,26 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/Users/alainastockdill/Library/Python/3.8/lib/python/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (7,12,14,17,19,21,23,25,32,48,51,52,55,57,59,61,63,65,67,70,71,72,73,74,75,76,77,126,129) have mixed types.Specify dtype option on import or set low_memory=False.\n  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The data at this point will have already been filtered by its QF code and by its CALCZCD\n",
     "# The data set should consist of only surface level points \n",
-    "data = pd.read_csv(\"../\")\n"
+    "data = pd.read_csv(\"../pool data/water_data_filtered.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,45 +189,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "       SHEETBAR       TN        TP  TEMP         DO    TURB        COND   VEL  \\\n",
-       "0      -4604348  7.31000  0.471000  23.0   6.900000  225.00  600.000000   NaN   \n",
-       "7      -4604344  6.32000  0.290000  20.2   8.000000   64.00  699.000000   NaN   \n",
-       "10     -4604342  6.19000  0.417000  18.5   7.900000  100.00  688.000000   NaN   \n",
-       "13     -4604340  2.88000  0.122000  16.0   8.200000   18.00  584.000000   NaN   \n",
-       "16     -4604338  4.50000  0.326000  19.2   7.000000   90.00  689.000000   NaN   \n",
-       "...         ...      ...       ...   ...        ...     ...         ...   ...   \n",
-       "88589  46022567  2.29400  0.433000  28.7   9.700000   59.00  578.500000  0.01   \n",
-       "88591  46025292  2.58800  0.153000  11.2  10.300000   27.00  603.000000  0.02   \n",
-       "88593  47000506  1.30425  0.173250  10.4  12.166667    8.25  353.666667  0.05   \n",
-       "88597  47000663  1.68300  0.091000  15.6   9.400000   12.00  216.000000   NaN   \n",
-       "88601  47000678  2.16500  0.180333  28.3   5.300000   19.00  447.000000   NaN   \n",
+       "       SHEETBAR        TN        TP  TEMP         DO   TURB        COND   VEL  \\\n",
+       "0      41004753  2.897000  0.121000   0.1  11.600000    4.0  490.000000   NaN   \n",
+       "1      41004755  3.054000  0.112000   0.1  11.900000    4.0  484.000000   NaN   \n",
+       "2      41004757  1.282000  0.066000   0.1  11.000000    4.0  175.000000   NaN   \n",
+       "3      41004761  3.266000  0.115000   0.1  11.700000    3.0  478.000000   NaN   \n",
+       "4      41004763  2.908000  0.105000   0.1  10.600000    3.0  446.000000  0.07   \n",
+       "...         ...       ...       ...   ...        ...    ...         ...   ...   \n",
+       "59149  47001268  1.430000  0.094000  23.4  11.000000   16.0  280.000000   NaN   \n",
+       "59150  47001269  8.620000  0.193000  17.3   8.800000   28.0  727.000000   NaN   \n",
+       "0      46015274  1.599000  0.664000  24.5   6.200000  140.0  461.000000  0.01   \n",
+       "1      47000506  1.705333  0.116667  10.4  12.166667   11.0  353.666667  0.05   \n",
+       "2      47000678  2.165000  0.180333  28.3   5.300000   19.0  447.000000   NaN   \n",
        "\n",
-       "            SS    WDP     CHLcal  SECCHI  LONGITUDE   LATITUDE        DATE  \n",
-       "0      337.500   7.00        NaN    11.0 -90.533462  39.939235  06/11/1993  \n",
-       "7       86.800   5.00        NaN    18.0 -90.068509  40.316217  06/08/1993  \n",
-       "10     147.300  15.30        NaN     8.0 -89.651818  40.617643  06/07/1993  \n",
-       "13      24.500   0.40        NaN    -9.0 -89.956183  40.325077  06/07/1993  \n",
-       "16     109.500  18.00        NaN    16.0 -89.651818  40.617643  05/25/1993  \n",
-       "...        ...    ...        ...     ...        ...        ...         ...  \n",
-       "88589   44.800   0.83  69.883580    21.0 -90.507745  39.989032  08/02/2017  \n",
-       "88591   22.280   1.50   3.617150    37.0 -90.049078  40.330350  11/12/2020  \n",
-       "88593   11.475    NaN   8.780450    45.0 -91.205630  43.370779  10/29/1999  \n",
-       "88597   16.100    NaN  32.310780     NaN -91.049424  43.000181  06/07/2001  \n",
-       "88601      NaN   0.91   9.197013    45.0 -91.248337  43.415769  07/24/2001  \n",
+       "               SS   WDP      CHLcal  SECCHI  LONGITUDE   LATITUDE        DATE  \\\n",
+       "0        2.900000  7.82         NaN   119.0 -92.226798  44.447461  12/30/1996   \n",
+       "1        2.400000  5.50         NaN   187.0 -92.100458  44.412100  12/30/1996   \n",
+       "2        2.400000  0.71         NaN    89.0 -92.084185  44.410152  12/30/1996   \n",
+       "3        2.200000  5.33         NaN   123.0 -92.134004  44.423271  12/30/1996   \n",
+       "4        1.800000  1.10         NaN   119.0 -91.932921  44.326994  12/30/1996   \n",
+       "...           ...   ...         ...     ...        ...        ...         ...   \n",
+       "59149   28.000000   NaN   74.572080     NaN -91.049424  43.000181  06/16/2006   \n",
+       "59150   24.300000   NaN    3.917360     NaN -91.197341  43.093663  06/16/2006   \n",
+       "0      164.900000  0.57  113.298125    13.0 -90.103645  40.253465  08/07/2009   \n",
+       "1       14.933333   NaN   12.040600    45.0 -91.205630  43.370779  10/29/1999   \n",
+       "2             NaN  0.91    9.197013    45.0 -91.248337  43.415769  07/24/2001   \n",
        "\n",
-       "[156473 rows x 15 columns]"
+       "       FLDNUM  \n",
+       "0           1  \n",
+       "1           1  \n",
+       "2           1  \n",
+       "3           1  \n",
+       "4           1  \n",
+       "...       ...  \n",
+       "59149       7  \n",
+       "59150       7  \n",
+       "0           6  \n",
+       "1           7  \n",
+       "2           7  \n",
+       "\n",
+       "[59145 rows x 16 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SHEETBAR</th>\n      <th>TN</th>\n      <th>TP</th>\n      <th>TEMP</th>\n      <th>DO</th>\n      <th>TURB</th>\n      <th>COND</th>\n      <th>VEL</th>\n      <th>SS</th>\n      <th>WDP</th>\n      <th>CHLcal</th>\n      <th>SECCHI</th>\n      <th>LONGITUDE</th>\n      <th>LATITUDE</th>\n      <th>DATE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-4604348</td>\n      <td>7.31000</td>\n      <td>0.471000</td>\n      <td>23.0</td>\n      <td>6.900000</td>\n      <td>225.00</td>\n      <td>600.000000</td>\n      <td>NaN</td>\n      <td>337.500</td>\n      <td>7.00</td>\n      <td>NaN</td>\n      <td>11.0</td>\n      <td>-90.533462</td>\n      <td>39.939235</td>\n      <td>06/11/1993</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>-4604344</td>\n      <td>6.32000</td>\n      <td>0.290000</td>\n      <td>20.2</td>\n      <td>8.000000</td>\n      <td>64.00</td>\n      <td>699.000000</td>\n      <td>NaN</td>\n      <td>86.800</td>\n      <td>5.00</td>\n      <td>NaN</td>\n      <td>18.0</td>\n      <td>-90.068509</td>\n      <td>40.316217</td>\n      <td>06/08/1993</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>-4604342</td>\n      <td>6.19000</td>\n      <td>0.417000</td>\n      <td>18.5</td>\n      <td>7.900000</td>\n      <td>100.00</td>\n      <td>688.000000</td>\n      <td>NaN</td>\n      <td>147.300</td>\n      <td>15.30</td>\n      <td>NaN</td>\n      <td>8.0</td>\n      <td>-89.651818</td>\n      <td>40.617643</td>\n      <td>06/07/1993</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>-4604340</td>\n      <td>2.88000</td>\n      <td>0.122000</td>\n      <td>16.0</td>\n      <td>8.200000</td>\n      <td>18.00</td>\n      <td>584.000000</td>\n      <td>NaN</td>\n      <td>24.500</td>\n      <td>0.40</td>\n      <td>NaN</td>\n      <td>-9.0</td>\n      <td>-89.956183</td>\n      <td>40.325077</td>\n      <td>06/07/1993</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>-4604338</td>\n      <td>4.50000</td>\n      <td>0.326000</td>\n      <td>19.2</td>\n      <td>7.000000</td>\n      <td>90.00</td>\n      <td>689.000000</td>\n      <td>NaN</td>\n      <td>109.500</td>\n      <td>18.00</td>\n      <td>NaN</td>\n      <td>16.0</td>\n      <td>-89.651818</td>\n      <td>40.617643</td>\n      <td>05/25/1993</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>88589</th>\n      <td>46022567</td>\n      <td>2.29400</td>\n      <td>0.433000</td>\n      <td>28.7</td>\n      <td>9.700000</td>\n      <td>59.00</td>\n      <td>578.500000</td>\n      <td>0.01</td>\n      <td>44.800</td>\n      <td>0.83</td>\n      <td>69.883580</td>\n      <td>21.0</td>\n      <td>-90.507745</td>\n      <td>39.989032</td>\n      <td>08/02/2017</td>\n    </tr>\n    <tr>\n      <th>88591</th>\n      <td>46025292</td>\n      <td>2.58800</td>\n      <td>0.153000</td>\n      <td>11.2</td>\n      <td>10.300000</td>\n      <td>27.00</td>\n      <td>603.000000</td>\n      <td>0.02</td>\n      <td>22.280</td>\n      <td>1.50</td>\n      <td>3.617150</td>\n      <td>37.0</td>\n      <td>-90.049078</td>\n      <td>40.330350</td>\n      <td>11/12/2020</td>\n    </tr>\n    <tr>\n      <th>88593</th>\n      <td>47000506</td>\n      <td>1.30425</td>\n      <td>0.173250</td>\n      <td>10.4</td>\n      <td>12.166667</td>\n      <td>8.25</td>\n      <td>353.666667</td>\n      <td>0.05</td>\n      <td>11.475</td>\n      <td>NaN</td>\n      <td>8.780450</td>\n      <td>45.0</td>\n      <td>-91.205630</td>\n      <td>43.370779</td>\n      <td>10/29/1999</td>\n    </tr>\n    <tr>\n      <th>88597</th>\n      <td>47000663</td>\n      <td>1.68300</td>\n      <td>0.091000</td>\n      <td>15.6</td>\n      <td>9.400000</td>\n      <td>12.00</td>\n      <td>216.000000</td>\n      <td>NaN</td>\n      <td>16.100</td>\n      <td>NaN</td>\n      <td>32.310780</td>\n      <td>NaN</td>\n      <td>-91.049424</td>\n      <td>43.000181</td>\n      <td>06/07/2001</td>\n    </tr>\n    <tr>\n      <th>88601</th>\n      <td>47000678</td>\n      <td>2.16500</td>\n      <td>0.180333</td>\n      <td>28.3</td>\n      <td>5.300000</td>\n      <td>19.00</td>\n      <td>447.000000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.91</td>\n      <td>9.197013</td>\n      <td>45.0</td>\n      <td>-91.248337</td>\n      <td>43.415769</td>\n      <td>07/24/2001</td>\n    </tr>\n  </tbody>\n</table>\n<p>156473 rows × 15 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SHEETBAR</th>\n      <th>TN</th>\n      <th>TP</th>\n      <th>TEMP</th>\n      <th>DO</th>\n      <th>TURB</th>\n      <th>COND</th>\n      <th>VEL</th>\n      <th>SS</th>\n      <th>WDP</th>\n      <th>CHLcal</th>\n      <th>SECCHI</th>\n      <th>LONGITUDE</th>\n      <th>LATITUDE</th>\n      <th>DATE</th>\n      <th>FLDNUM</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>41004753</td>\n      <td>2.897000</td>\n      <td>0.121000</td>\n      <td>0.1</td>\n      <td>11.600000</td>\n      <td>4.0</td>\n      <td>490.000000</td>\n      <td>NaN</td>\n      <td>2.900000</td>\n      <td>7.82</td>\n      <td>NaN</td>\n      <td>119.0</td>\n      <td>-92.226798</td>\n      <td>44.447461</td>\n      <td>12/30/1996</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>41004755</td>\n      <td>3.054000</td>\n      <td>0.112000</td>\n      <td>0.1</td>\n      <td>11.900000</td>\n      <td>4.0</td>\n      <td>484.000000</td>\n      <td>NaN</td>\n      <td>2.400000</td>\n      <td>5.50</td>\n      <td>NaN</td>\n      <td>187.0</td>\n      <td>-92.100458</td>\n      <td>44.412100</td>\n      <td>12/30/1996</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>41004757</td>\n      <td>1.282000</td>\n      <td>0.066000</td>\n      <td>0.1</td>\n      <td>11.000000</td>\n      <td>4.0</td>\n      <td>175.000000</td>\n      <td>NaN</td>\n      <td>2.400000</td>\n      <td>0.71</td>\n      <td>NaN</td>\n      <td>89.0</td>\n      <td>-92.084185</td>\n      <td>44.410152</td>\n      <td>12/30/1996</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>41004761</td>\n      <td>3.266000</td>\n      <td>0.115000</td>\n      <td>0.1</td>\n      <td>11.700000</td>\n      <td>3.0</td>\n      <td>478.000000</td>\n      <td>NaN</td>\n      <td>2.200000</td>\n      <td>5.33</td>\n      <td>NaN</td>\n      <td>123.0</td>\n      <td>-92.134004</td>\n      <td>44.423271</td>\n      <td>12/30/1996</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>41004763</td>\n      <td>2.908000</td>\n      <td>0.105000</td>\n      <td>0.1</td>\n      <td>10.600000</td>\n      <td>3.0</td>\n      <td>446.000000</td>\n      <td>0.07</td>\n      <td>1.800000</td>\n      <td>1.10</td>\n      <td>NaN</td>\n      <td>119.0</td>\n      <td>-91.932921</td>\n      <td>44.326994</td>\n      <td>12/30/1996</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>59149</th>\n      <td>47001268</td>\n      <td>1.430000</td>\n      <td>0.094000</td>\n      <td>23.4</td>\n      <td>11.000000</td>\n      <td>16.0</td>\n      <td>280.000000</td>\n      <td>NaN</td>\n      <td>28.000000</td>\n      <td>NaN</td>\n      <td>74.572080</td>\n      <td>NaN</td>\n      <td>-91.049424</td>\n      <td>43.000181</td>\n      <td>06/16/2006</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>59150</th>\n      <td>47001269</td>\n      <td>8.620000</td>\n      <td>0.193000</td>\n      <td>17.3</td>\n      <td>8.800000</td>\n      <td>28.0</td>\n      <td>727.000000</td>\n      <td>NaN</td>\n      <td>24.300000</td>\n      <td>NaN</td>\n      <td>3.917360</td>\n      <td>NaN</td>\n      <td>-91.197341</td>\n      <td>43.093663</td>\n      <td>06/16/2006</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>46015274</td>\n      <td>1.599000</td>\n      <td>0.664000</td>\n      <td>24.5</td>\n      <td>6.200000</td>\n      <td>140.0</td>\n      <td>461.000000</td>\n      <td>0.01</td>\n      <td>164.900000</td>\n      <td>0.57</td>\n      <td>113.298125</td>\n      <td>13.0</td>\n      <td>-90.103645</td>\n      <td>40.253465</td>\n      <td>08/07/2009</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>47000506</td>\n      <td>1.705333</td>\n      <td>0.116667</td>\n      <td>10.4</td>\n      <td>12.166667</td>\n      <td>11.0</td>\n      <td>353.666667</td>\n      <td>0.05</td>\n      <td>14.933333</td>\n      <td>NaN</td>\n      <td>12.040600</td>\n      <td>45.0</td>\n      <td>-91.205630</td>\n      <td>43.370779</td>\n      <td>10/29/1999</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>47000678</td>\n      <td>2.165000</td>\n      <td>0.180333</td>\n      <td>28.3</td>\n      <td>5.300000</td>\n      <td>19.0</td>\n      <td>447.000000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.91</td>\n      <td>9.197013</td>\n      <td>45.0</td>\n      <td>-91.248337</td>\n      <td>43.415769</td>\n      <td>07/24/2001</td>\n      <td>7</td>\n    </tr>\n  </tbody>\n</table>\n<p>59145 rows × 16 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 122
     }
    ],
    "source": [
@@ -245,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
