Update Open River Analysis.ipynb

--- a/pools EDA/CM/Open River Analysis.ipynb
+++ b/pools EDA/CM/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "color-receipt",
+   "id": "prescription-shepherd",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 171,
    "id": "swedish-raising",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-concord",
+   "id": "pacific-earthquake",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -246,9 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 182,
    "id": "polyphonic-understanding",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +319,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-therapist",
+   "id": "executive-kingdom",
+   "metadata": {},
+   "source": [
+    "Checking for weird location codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "settled-course",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for index,row in water_data.iterrows():\n",
+    "    if not str(row[\"LOCATCD\"]).isnumeric():\n",
+    "        print(row[\"LOCATCD\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "equipped-crawford",
+   "metadata": {},
+   "source": [
+    "Insanity check for time codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "victorian-capability",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['3', '4', '1', '2'], dtype=object)"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"TIME CODE\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "positive-modification",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SF    13606\n",
+       "BT       33\n",
+       "MD       16\n",
+       "OT        9\n",
+       "Name: CALCZCD, dtype: int64"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"CALCZCD\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fatal-representation",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -371,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intense-climb",
+   "id": "packed-portrait",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -579,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hazardous-console",
+   "id": "hydraulic-jamaica",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -650,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "computational-auditor",
+   "id": "portuguese-prince",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -659,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "norwegian-essay",
+   "id": "protective-venue",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "running-montreal",
+   "id": "descending-myrtle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "running-uganda",
+   "id": "disciplinary-morgan",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "occasional-soviet",
+   "id": "signal-engineering",
    "metadata": {
     "scrolled": false
    },
@@ -757,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "furnished-phenomenon",
+   "id": "accredited-profit",
    "metadata": {},
    "source": [
     "Take a closer look at VEL"
@@ -766,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "confidential-limit",
+   "id": "removed-organic",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "final-proportion",
+   "id": "forced-committee",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "necessary-flood",
+   "id": "steady-special",
    "metadata": {},
    "source": [
     "#### Interpolating missing data"
@@ -826,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "rural-protest",
+   "id": "pleased-facility",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "earned-vacuum",
+   "id": "entitled-berlin",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-genre",
+   "id": "funded-terror",
    "metadata": {},
    "source": [
     "Save the interpolated dataset"
@@ -1414,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "valued-reynolds",
+   "id": "decent-university",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intermediate-investigation",
+   "id": "diagnostic-princess",
    "metadata": {},
    "source": [
     "Now see how many rows we gained after interpolation, and dropping VEL as a variable"
@@ -1432,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "israeli-dealer",
+   "id": "removable-notification",
    "metadata": {},
    "outputs": [
     {
