fixed file path

--- a/Data_Collapse.ipynb
+++ b/Data_Collapse.ipynb
@@ -32,22 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/alainastockdill/Library/Python/3.8/lib/python/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (20,21,23) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The data at this point will have already been filtered by its QF code and by its CALCZCD\n",
     "# The data set should consist of only surface level points \n",
-    "data = pd.read_csv(\"../../water_data_filtered.csv\")\n"
+    "data = pd.read_csv(\"pools EDA/pool data/water_data_filtered.csv\")\n"
    ]
   },
   {
@@ -940,9 +931,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python395jvsc74a57bd07812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d",
+   "display_name": "Python 3.9.5 64-bit ('3.9')"
   },
   "language_info": {
    "codemirror_mode": {
