--- a/DataCleaning/Data_Collapse.ipynb
+++ b/DataCleaning/Data_Collapse.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,12 +46,12 @@
    "source": [
     "# The data at this point will have already been filtered by its QF code and by its CALCZCD\n",
     "# The data set should consist of only surface level points \n",
-    "data = pd.read_csv(\"water_data_filtered.csv\")\n"
+    "data = pd.read_csv(\"../LTRM data/water_data_filtered.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SHEETBAR</th>\n      <th>TN</th>\n      <th>TP</th>\n      <th>TEMP</th>\n      <th>DO</th>\n      <th>TURB</th>\n      <th>COND</th>\n      <th>VEL</th>\n      <th>SS</th>\n      <th>WDP</th>\n      <th>CHLcal</th>\n      <th>SECCHI</th>\n      <th>LONGITUDE</th>\n      <th>LATITUDE</th>\n      <th>DATE</th>\n      <th>FLDNUM</th>\n      <th>LOCATCD</th>\n      <th>STRATUM</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-4203181</td>\n      <td>1.820000</td>\n      <td>0.083000</td>\n      <td>-0.1</td>\n      <td>13.700000</td>\n      <td>6.0</td>\n      <td>114.000000</td>\n      <td>0.00</td>\n      <td>-1.000000</td>\n      <td>2.07</td>\n      <td>NaN</td>\n      <td>98.0</td>\n      <td>-91.252326</td>\n      <td>43.841345</td>\n      <td>12/03/1991</td>\n      <td>2.0</td>\n      <td>BK01.0N</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-4103818</td>\n      <td>3.200000</td>\n      <td>0.123000</td>\n      <td>0.8</td>\n      <td>11.600000</td>\n      <td>3.0</td>\n      <td>510.000000</td>\n      <td>0.13</td>\n      <td>-1.000000</td>\n      <td>3.20</td>\n      <td>NaN</td>\n      <td>263.0</td>\n      <td>-92.052631</td>\n      <td>44.398767</td>\n      <td>02/13/1993</td>\n      <td>1.0</td>\n      <td>M761.5E</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-4103809</td>\n      <td>3.920000</td>\n      <td>0.152000</td>\n      <td>0.0</td>\n      <td>11.300000</td>\n      <td>1.0</td>\n      <td>660.000000</td>\n      <td>NaN</td>\n      <td>-1.000000</td>\n      <td>4.90</td>\n      <td>NaN</td>\n      <td>269.0</td>\n      <td>-92.134004</td>\n      <td>44.423271</td>\n      <td>02/12/1993</td>\n      <td>1.0</td>\n      <td>M766.0I</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-4102507</td>\n      <td>5.270000</td>\n      <td>0.114000</td>\n      <td>0.7</td>\n      <td>13.200000</td>\n      <td>2.0</td>\n      <td>586.000000</td>\n      <td>0.05</td>\n      <td>-1.000000</td>\n      <td>3.32</td>\n      <td>NaN</td>\n      <td>210.0</td>\n      <td>-91.946849</td>\n      <td>44.327321</td>\n      <td>02/06/1992</td>\n      <td>1.0</td>\n      <td>M753.2S</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-4102504</td>\n      <td>4.850000</td>\n      <td>0.101000</td>\n      <td>0.0</td>\n      <td>12.400000</td>\n      <td>3.0</td>\n      <td>310.000000</td>\n      <td>0.06</td>\n      <td>-1.000000</td>\n      <td>1.25</td>\n      <td>NaN</td>\n      <td>152.0</td>\n      <td>-91.980508</td>\n      <td>44.391943</td>\n      <td>02/06/1992</td>\n      <td>1.0</td>\n      <td>M758.6Y</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>105266</th>\n      <td>47001269</td>\n      <td>8.620000</td>\n      <td>0.193000</td>\n      <td>17.3</td>\n      <td>8.800000</td>\n      <td>28.0</td>\n      <td>727.000000</td>\n      <td>NaN</td>\n      <td>24.300000</td>\n      <td>NaN</td>\n      <td>3.917360</td>\n      <td>NaN</td>\n      <td>-91.197341</td>\n      <td>43.093663</td>\n      <td>06/16/2006</td>\n      <td>7.0</td>\n      <td>YL01.5Y</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>42009244</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>8.9</td>\n      <td>10.300000</td>\n      <td>20.0</td>\n      <td>254.000000</td>\n      <td>0.19</td>\n      <td>19.000000</td>\n      <td>3.60</td>\n      <td>3.932990</td>\n      <td>42.0</td>\n      <td>-91.275639</td>\n      <td>43.846885</td>\n      <td>04/24/2001</td>\n      <td>NaN</td>\n      <td>0121088</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>46015274</td>\n      <td>1.599000</td>\n      <td>0.664000</td>\n      <td>24.5</td>\n      <td>6.200000</td>\n      <td>140.0</td>\n      <td>461.000000</td>\n      <td>0.01</td>\n      <td>164.900000</td>\n      <td>0.57</td>\n      <td>113.298125</td>\n      <td>13.0</td>\n      <td>-90.103645</td>\n      <td>40.253465</td>\n      <td>08/07/2009</td>\n      <td>NaN</td>\n      <td>0962021</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>47000506</td>\n      <td>1.705333</td>\n      <td>0.116667</td>\n      <td>10.4</td>\n      <td>12.166667</td>\n      <td>11.0</td>\n      <td>353.666667</td>\n      <td>0.05</td>\n      <td>14.933333</td>\n      <td>NaN</td>\n      <td>12.040600</td>\n      <td>45.0</td>\n      <td>-91.205630</td>\n      <td>43.370779</td>\n      <td>10/29/1999</td>\n      <td>NaN</td>\n      <td>M663.4E</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>47000678</td>\n      <td>2.165000</td>\n      <td>0.180333</td>\n      <td>28.3</td>\n      <td>5.300000</td>\n      <td>19.0</td>\n      <td>447.000000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.91</td>\n      <td>9.197013</td>\n      <td>45.0</td>\n      <td>-91.248337</td>\n      <td>43.415769</td>\n      <td>07/24/2001</td>\n      <td>NaN</td>\n      <td>M667.8F</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>105147 rows × 18 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 13
     }
    ],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SHEETBAR</th>\n      <th>TN</th>\n      <th>TP</th>\n      <th>TEMP</th>\n      <th>DO</th>\n      <th>TURB</th>\n      <th>COND</th>\n      <th>VEL</th>\n      <th>SS</th>\n      <th>WDP</th>\n      <th>CHLcal</th>\n      <th>SECCHI</th>\n      <th>LONGITUDE</th>\n      <th>LATITUDE</th>\n      <th>DATE</th>\n      <th>FLDNUM</th>\n      <th>LOCATCD</th>\n      <th>STRATUM</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-4203181</td>\n      <td>1.820</td>\n      <td>0.083</td>\n      <td>-0.1</td>\n      <td>13.7</td>\n      <td>6.0</td>\n      <td>114.0</td>\n      <td>0.00</td>\n      <td>-1.0</td>\n      <td>2.07</td>\n      <td>NaN</td>\n      <td>98.0</td>\n      <td>-91.252326</td>\n      <td>43.841345</td>\n      <td>12/03/1991</td>\n      <td>2</td>\n      <td>BK01.0N</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-4103818</td>\n      <td>3.200</td>\n      <td>0.123</td>\n      <td>0.8</td>\n      <td>11.6</td>\n      <td>3.0</td>\n      <td>510.0</td>\n      <td>0.13</td>\n      <td>-1.0</td>\n      <td>3.20</td>\n      <td>NaN</td>\n      <td>263.0</td>\n      <td>-92.052631</td>\n      <td>44.398767</td>\n      <td>02/13/1993</td>\n      <td>1</td>\n      <td>M761.5E</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-4103809</td>\n      <td>3.920</td>\n      <td>0.152</td>\n      <td>0.0</td>\n      <td>11.3</td>\n      <td>1.0</td>\n      <td>660.0</td>\n      <td>NaN</td>\n      <td>-1.0</td>\n      <td>4.90</td>\n      <td>NaN</td>\n      <td>269.0</td>\n      <td>-92.134004</td>\n      <td>44.423271</td>\n      <td>02/12/1993</td>\n      <td>1</td>\n      <td>M766.0I</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-4102507</td>\n      <td>5.270</td>\n      <td>0.114</td>\n      <td>0.7</td>\n      <td>13.2</td>\n      <td>2.0</td>\n      <td>586.0</td>\n      <td>0.05</td>\n      <td>-1.0</td>\n      <td>3.32</td>\n      <td>NaN</td>\n      <td>210.0</td>\n      <td>-91.946849</td>\n      <td>44.327321</td>\n      <td>02/06/1992</td>\n      <td>1</td>\n      <td>M753.2S</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-4102504</td>\n      <td>4.850</td>\n      <td>0.101</td>\n      <td>0.0</td>\n      <td>12.4</td>\n      <td>3.0</td>\n      <td>310.0</td>\n      <td>0.06</td>\n      <td>-1.0</td>\n      <td>1.25</td>\n      <td>NaN</td>\n      <td>152.0</td>\n      <td>-91.980508</td>\n      <td>44.391943</td>\n      <td>02/06/1992</td>\n      <td>1</td>\n      <td>M758.6Y</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>105138</th>\n      <td>47001262</td>\n      <td>6.830</td>\n      <td>0.061</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>6.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>7.9</td>\n      <td>NaN</td>\n      <td>4.52596</td>\n      <td>NaN</td>\n      <td>-91.197341</td>\n      <td>43.093663</td>\n      <td>05/19/2006</td>\n      <td>7</td>\n      <td>YL01.5Y</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>105139</th>\n      <td>47001263</td>\n      <td>2.728</td>\n      <td>0.107</td>\n      <td>22.8</td>\n      <td>8.4</td>\n      <td>8.0</td>\n      <td>485.0</td>\n      <td>NaN</td>\n      <td>10.5</td>\n      <td>NaN</td>\n      <td>15.86632</td>\n      <td>NaN</td>\n      <td>-91.205630</td>\n      <td>43.370779</td>\n      <td>06/16/2006</td>\n      <td>7</td>\n      <td>M663.4E</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>105140</th>\n      <td>47001267</td>\n      <td>2.522</td>\n      <td>0.121</td>\n      <td>22.4</td>\n      <td>6.6</td>\n      <td>8.0</td>\n      <td>477.0</td>\n      <td>NaN</td>\n      <td>10.3</td>\n      <td>NaN</td>\n      <td>1.83928</td>\n      <td>NaN</td>\n      <td>-91.112240</td>\n      <td>43.200813</td>\n      <td>06/16/2006</td>\n      <td>7</td>\n      <td>M646.9X</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>105141</th>\n      <td>47001268</td>\n      <td>1.430</td>\n      <td>0.094</td>\n      <td>23.4</td>\n      <td>11.0</td>\n      <td>16.0</td>\n      <td>280.0</td>\n      <td>NaN</td>\n      <td>28.0</td>\n      <td>NaN</td>\n      <td>74.57208</td>\n      <td>NaN</td>\n      <td>-91.049424</td>\n      <td>43.000181</td>\n      <td>06/16/2006</td>\n      <td>7</td>\n      <td>WS05.0Y</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>105142</th>\n      <td>47001269</td>\n      <td>8.620</td>\n      <td>0.193</td>\n      <td>17.3</td>\n      <td>8.8</td>\n      <td>28.0</td>\n      <td>727.0</td>\n      <td>NaN</td>\n      <td>24.3</td>\n      <td>NaN</td>\n      <td>3.91736</td>\n      <td>NaN</td>\n      <td>-91.197341</td>\n      <td>43.093663</td>\n      <td>06/16/2006</td>\n      <td>7</td>\n      <td>YL01.5Y</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>105143 rows × 18 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 14
     }
    ],
    "source": [
@@ -281,28 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collapsed_data.to_csv(\"cleaned_data.csv\", index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "<ipython-input-18-a1051e5c9b0e>:1: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  collapsed_data[\"YEAR\"] = pd.DatetimeIndex(collapsed_data[\"DATE\"]).year\n"
-     ]
-    }
-   ],
-   "source": [
-    "collapsed_data[\"YEAR\"] = pd.DatetimeIndex(collapsed_data[\"DATE\"]).year"
+    "collapsed_data.to_csv(\"../LTRM data/cleaned_data.csv\", index = False)"
    ]
   }
  ],
