--- a/pools EDA/CM/Open River Analysis.ipynb
+++ b/pools EDA/CM/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "rolled-feedback",
+   "id": "genuine-noise",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ambient-quick",
+   "id": "neutral-witch",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broke-settle",
+   "id": "accessible-netherlands",
    "metadata": {},
    "source": [
     "Checking for weird location codes"
@@ -328,20 +328,22 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "naked-danger",
+   "id": "governmental-savage",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "num_weird = 0\n",
     "for index,row in water_data.iterrows():\n",
     "    if not str(row[\"LOCATCD\"]).isnumeric():\n",
+    "        num_weird += 1\n",
     "        print(row[\"LOCATCD\"])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "related-silicon",
+   "id": "junior-worry",
    "metadata": {},
    "source": [
     "Insanity check for time codes"
@@ -350,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "productive-business",
+   "id": "directed-mapping",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "rental-seattle",
+   "id": "suitable-variation",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-commission",
+   "id": "indirect-amateur",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hispanic-nerve",
+   "id": "inappropriate-criminal",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -657,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-violin",
+   "id": "aging-beverage",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -728,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "judicial-radio",
+   "id": "improving-timing",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -737,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "earned-america",
+   "id": "literary-converter",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "colored-natural",
+   "id": "unexpected-coffee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "adapted-israeli",
+   "id": "pretty-cologne",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "perceived-inspection",
+   "id": "amateur-preparation",
    "metadata": {
     "scrolled": false
    },
@@ -835,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-impact",
+   "id": "viral-density",
    "metadata": {},
    "source": [
     "Take a closer look at VEL"
@@ -844,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "conscious-jumping",
+   "id": "meaning-magazine",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "outdoor-toronto",
+   "id": "unlikely-genre",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-assurance",
+   "id": "mature-motorcycle",
    "metadata": {},
    "source": [
     "#### Interpolating missing data"
@@ -904,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "powerful-simpson",
+   "id": "rising-large",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "conscious-month",
+   "id": "determined-montana",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "auburn-bachelor",
+   "id": "enclosed-fiber",
    "metadata": {},
    "source": [
     "Save the interpolated dataset"
@@ -1492,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "global-infrastructure",
+   "id": "patient-heath",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detected-spencer",
+   "id": "tested-analysis",
    "metadata": {},
    "source": [
     "Now see how many rows we gained after interpolation, and dropping VEL as a variable"
@@ -1510,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "original-documentation",
+   "id": "searching-friday",
    "metadata": {},
    "outputs": [
     {
