--- a/DataCleaning/Data_Collapse.ipynb
+++ b/DataCleaning/Data_Collapse.ipynb
@@ -27,12 +27,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 1,
+   "execution_count": 38,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "# Reset index of unique_sheetbars and rename the column to \"count\" \n",
+    "# Rename the column to \"count\" \n",
     "unique_sheetbars = pd.DataFrame(unique_sheetbars, columns = ['count']).reset_index()\n",
     "\n",
     "# Filter out the sheetbar codes that have multiple rows \n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -158,18 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a separate dataframe that stores the date, stratum, fldnum, lat, long, and location code of each sample\n",
     "# Drops duplicates so that we will only have one set of values per barcode\n",
-    "identifiers = pd.DataFrame(data_dups, columns = ['SHEETBAR','DATE', 'STRATUM', 'LOCATCD', 'LATITUDE', 'LONGITUDE', 'FLDNUM']).drop_duplicates()"
+    "identifiers = pd.DataFrame(data_dups, columns = ['SHEETBAR','DATE', 'STRATUM', 'LOCATCD', 'FLDNUM', 'LATITUDE', 'LONGITUDE']).drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -219,32 +219,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the averaged rows to our final dataframe\n",
-    "collapsed_data = collapsed_data.append(temp)"
+    "collapsed_data = collapsed_data.append(temp, ignore_index = True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(collapsed_data.index)\n",
-    "#collapsed_data.reset_index(drop = True)\n",
-    "#print(collapsed_data.index)"
+    "# We don't need thi\n",
+    "#collapsed_data = collapsed_data.reset_index(drop = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collapsed_data.to_csv(\"../LTRM data/cleaned_data.csv\", index = False)"
+    "collapsed_data.to_csv(\"../LTRM data/cleaned_data.csv\")"
    ]
   }
  ],
